Fixed required input highlighting cutoff issue in firefox.

--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -539,6 +539,10 @@ section#contact{
 form{
 	$input-spacing: 1.2rem;
 	$input-font-size: 1.2rem;
+	float: left;
+	width: 100%;
+	padding: 0.5rem;
+	box-sizing: border-box;
 	input,
 	textarea{
 		box-sizing: border-box;
